appId: com.azisbek_dzhantaev.rikexpoapp
name: Invalid Login
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Войти в GOX"
    timeout: 15000
- tapOn: "Email"
- inputText: ${E2E_AUTH_EMAIL}
- tapOn: "Пароль"
- inputText: ${E2E_AUTH_INVALID_PASSWORD}
- hideKeyboard
- tapOn: "Войти"
- extendedWaitUntil:
    visible: "Invalid login credentials"
    timeout: 20000
- assertVisible: "Invalid login credentials"
- assertVisible: "Войти в GOX"
- stopApp
